--- a/two/index.html
+++ b/two/index.html
@@ -9,12 +9,12 @@
         <section>
             <main>
                 <h1 id="title">Survery Form</h1>
-                <p id="description">This is a survey form.</p>
-                <form id="survey form">
+                <p id="description">Let us know how we did.</p>
+                <form id="survey-form" >
+
                     Name :<input id="name-label" type="text" placeholder="enter your name"><br>
-                    Email Address: <input id="email-label" type="email" name="email" required placeholder="Enter a valid email address">
-                    Age: <input id="number-label" type="number" name="date" min="18" max="99" placeholder="enter date" required pattern="number">
-                    <button>Submit</button><br>
+                    Email Address: <input id="email-label" type="email" name="email" required placeholder="Enter a valid email address"><br>
+                    Age: <input id="number-label" type="number" name="date" min="18" max="99" placeholder="enter date" required pattern="number"><br>
 
                     <label>Which option best describes your current role?</label>
                     <select id="dropdown">
@@ -25,7 +25,7 @@
                     </select>
                     <br>
 
-                    <label>How likely is that you would recommend this website to your frined?</label><br>
+                    <label>How likely is that you would recommend this website to your friend?</label><br>
                         <input type="radio" name="menu" value="definitely"> Definitely <br>
                         <input type="radio" name="menu" value="maybe"> Maybe <br>
                         <input type="radio" name="menu" value="value">Not Sure <br>
