--- a/two/index.html
+++ b/two/index.html
@@ -25,7 +25,7 @@
                     </select>
                     <br>
 
-                    <label>How likely is that you would recommend this website to your friend?</label><br>
+                    <label id="radio">How likely is that you would recommend this website to your friend?</label><br>
                         <input type="radio" name="menu" value="definitely"> Definitely <br>
                         <input type="radio" name="menu" value="maybe"> Maybe <br>
                         <input type="radio" name="menu" value="value">Not Sure <br>
